# nanda-points-mcp

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  run-updated-test.ts  seed.js  test_mcp.js
docs/: x402-np.md
schemas/: agents.json  receipts.json  transactions.json  wallets.json
sdk/: README.md  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/src/nanda_points_sdk/: __init__.py  mcp.py  paywall.py  rest.py
sdk/python/tests/: smoke_test.py
sdk/src/: index.ts  mcp.ts  rest.ts  types.ts
sdk/test/: sdk.test.ts
sdk/typescript/: README.md
sdk/typescript/src/: index.ts  mcp.ts  paywall.ts  rest.ts
src/: combined-server.ts
src/api/: README.md  index.ts  receiptApi.ts  server.ts  transactionApi.ts  walletApi.ts
src/mcp/: server.ts
src/middleware/: x402-mcp.ts
src/models/: agent.ts  index.ts  points.ts  receipt.ts  transaction.ts  wallet.ts
src/routes/: agentRoutes.ts  index.ts  receiptRoutes.ts  transactionRoutes.ts  walletRoutes.ts
src/services/: agentService.ts  database.ts  index.ts  receiptService.ts  transactionService.ts  walletService.ts
src/utils/: mongo.ts
test/: test-mcp-client.ts
