[project]
name = "nanda-points-sdk"
version = "0.1.0"
description = "Python SDK for NANDA Points Server (REST + MCP)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "NANDA", email = "support@nanda.ai" }]
dependencies = [
  "requests>=2.31.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]


